Update index.html with current date and time

--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wofie Dine</title>
-    <script>
-        function updateClock() {
-            const now = new Date();
-            const timeString = now.toUTCString().split(' ')[4];
-            document.getElementById('clock').textContent = timeString;
-        }
-        setInterval(updateClock, 1000);
-    </script>
-</head>
-<body>
-    <header>
-        <h1>Welcome to Wolfie Dine</h1>
-        <div id="clock"></div>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-            <li><a href="#about">About Us</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="menu">
-            <h2>Menu</h2>
-            <p>Check out our delicious offerings!</p>
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>You can reach us at contact@wolfiedine.com.</p>
-        </section>
-        <section id="about">
-            <h2>About Us</h2>
-            <p>Wolfie Dine is committed to serving quality food.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2026 Wolfie Dine. All Rights Reserved.</p>
-    </footer>
-</body>
-</html>
+Current Date and Time (UTC - YYYY-MM-DD HH:MM:SS formatted): 2026-01-16 02:00:26
