--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Current Date and Time (UTC - YYYY-MM-DD HH:MM:SS formatted): 2026-01-16 02:00:26
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Wofie Dine</title>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Wolfie Dine</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#feedback">Feedback</a></li>
+        </ul>
+    </nav>
+    <section id="menu">
+        <h2>Menu</h2>
+        <p>Explore our delicious offerings!</p>
+    </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are dedicated to serving the best food!</p>
+    </section>
+    <section id="feedback">
+        <h2>Feedback</h2>
+        <p>We value your feedback!</p>
+    </section>
+    <footer>
+        <p>&copy; 2026 Wolfie Dine. All rights reserved.</p>
+    </footer>
+</body>
+</html>
