Fix whitespace and formatting inconsistencies in HTML

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             background: linear-gradient(135deg, #b71c1c 0%, #c62828 100%);
             color: white;
             padding: 1.5rem 0;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow:  0 4px 6px rgba(0, 0, 0, 0.1);
             position: sticky;
-            top:  0;
+            top: 0;
             z-index: 1000;
             animation: slideDown 0.5s ease-out;
         }
@@ -60,11 +60,11 @@
             font-size: 2.5rem;
             font-weight: 700;
             letter-spacing: -1px;
-            margin-bottom:  0.5rem;
+            margin-bottom: 0.5rem;
         }
 
         .tagline {
-            font-size: 1rem;
+            font-size:  1rem;
             opacity: 0.9;
             font-weight: 300;
         }
@@ -84,24 +84,24 @@
             margin-bottom: 0.25rem;
         }
 
-        . clock-date {
+        .clock-date {
             font-size: 0.9rem;
             opacity: 0.9;
         }
 
         /* Navigation */
         nav {
-            background: white;
+            background:  white;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             position: sticky;
             top: 100px;
-            z-index: 999;
+            z-index:  999;
         }
 
         .nav-container {
             max-width: 1400px;
             margin: 0 auto;
-            padding: 0 2rem;
+            padding:  0 2rem;
             display: flex;
             justify-content: center;
             gap: 2rem;
@@ -128,7 +128,7 @@
             width: 0;
             height: 3px;
             background: #c62828;
-            transition: width 0.3s ease;
+            transition:  width 0.3s ease;
         }
 
         .nav-btn:hover::after,
@@ -136,14 +136,14 @@
             width:  100%;
         }
 
-        . nav-btn:hover {
+        .nav-btn:hover {
             color: #b71c1c;
         }
 
         /* Main Content */
         main {
             max-width: 1400px;
-            margin: 2rem auto;
+            margin:  2rem auto;
             padding: 0 2rem 2rem;
         }
 
@@ -152,7 +152,7 @@
             display: none;
         }
 
-        .page.active {
+        . page.active {
             display: block;
         }
 
@@ -180,7 +180,7 @@
             font-size: 1.8rem;
         }
 
-        .meal-buttons {
+        . meal-buttons {
             display: flex;
             justify-content: center;
             gap: 1rem;
@@ -201,10 +201,10 @@
 
         .meal-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
+            box-shadow:  0 4px 8px rgba(255, 255, 255, 0.3);
         }
 
-        . meal-btn.active {
+        .meal-btn.active {
             background: #b71c1c;
             color: white;
             border-color: #b71c1c;
@@ -216,13 +216,13 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 1.2rem;
-            margin-top: 1.5rem;
+            margin-top:  1.5rem;
         }
 
         .dining-hall {
             background: white;
             border-radius: 10px;
-            box-shadow:  0 3px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             transition: all 0.3s ease;
             animation: fadeInUp 0.6s ease-out;
@@ -270,10 +270,10 @@
         .menu-content {
             padding: 1rem;
             max-height: 420px;
-            overflow-y:  auto;
+            overflow-y: auto;
         }
 
-        .menu-content: :-webkit-scrollbar {
+        .menu-content::-webkit-scrollbar {
             width: 6px;
         }
 
@@ -292,7 +292,7 @@
         }
 
         . menu-category {
-            margin-bottom: 1. 2rem;
+            margin-bottom: 1.2rem;
             animation: slideIn 0.5s ease-out;
         }
 
@@ -303,7 +303,7 @@
             }
             to {
                 opacity: 1;
-                transform:  translateX(0);
+                transform: translateX(0);
             }
         }
 
@@ -317,7 +317,7 @@
             border-bottom: 2px solid #ffebee;
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap:  0.5rem;
         }
 
         .category-icon {
@@ -335,7 +335,7 @@
             border-left: 2px solid transparent;
             transition: all 0.3s ease;
             cursor: pointer;
-            display: flex;
+            display:  flex;
             justify-content: space-between;
             align-items: center;
             font-size: 0.95rem;
@@ -347,7 +347,7 @@
             padding-left: 1. 2rem;
         }
 
-        . item-price {
+        .item-price {
             color: #c62828;
             font-weight: 600;
             font-size: 0.9rem;
@@ -450,9 +450,9 @@
             font-size: 1rem;
         }
 
-        .form-group input,
-        .form-group textarea {
-            padding:  0.75rem;
+        . form-group input,
+        . form-group textarea {
+            padding: 0.75rem;
             border: 2px solid #ffcdd2;
             border-radius: 8px;
             font-size: 1rem;
@@ -492,8 +492,8 @@
         /* Footer */
         footer {
             text-align: center;
-            padding:  2rem;
-            color:  #fff;
+            padding: 2rem;
+            color: #fff;
             margin-top: 3rem;
         }
 
@@ -503,7 +503,7 @@
                 font-size: 2rem;
             }
 
-            . header-container {
+            .header-container {
                 flex-direction: column;
                 text-align: center;
             }
@@ -523,10 +523,10 @@
 
             .nav-btn {
                 padding: 0.75rem 1rem;
-                font-size:  0.9rem;
+                font-size: 0.9rem;
             }
 
-            . meal-buttons {
+            .meal-buttons {
                 flex-direction: column;
                 align-items: stretch;
                 max-width: 300px;
@@ -552,7 +552,7 @@
                 max-height: 350px;
             }
 
-            .category-title {
+            . category-title {
                 padding-left: 0.5rem;
             }
 
@@ -570,26 +570,26 @@
                 font-size: 1.3rem;
             }
 
-            . category-title {
+            .category-title {
                 font-size: 1rem;
             }
 
             .about-content h2,
-            . feedback-content h2 {
+            .feedback-content h2 {
                 font-size:  2rem;
             }
         }
 
         /* Multi-column layout for larger screens */
-        @media (min-width:  1200px) {
+        @media (min-width: 1200px) {
             .dining-halls {
                 grid-template-columns: repeat(3, 1fr);
             }
         }
 
-        @media (min-width: 1600px) {
+        @media (min-width:  1600px) {
             .dining-halls {
-                grid-template-columns:  repeat(4, 1fr);
+                grid-template-columns: repeat(4, 1fr);
             }
         }
     </style>
@@ -863,10 +863,10 @@
 
         let currentMeal = 'breakfast';
 
-        // Load Dental Cafe data
+        // Load Dental Cafe data - FIXED URL
         async function loadDentalCafeData() {
             try {
-                const response = await fetch('dental_cafe. json? t=' + new Date().getTime());
+                const response = await fetch('dental_cafe.json? t=' + new Date().getTime());
                 if (! response.ok) throw new Error('Could not load menu');
                 dentalCafeData = await response.json();
                 renderDiningHalls();
@@ -1005,7 +1005,7 @@
             document.querySelectorAll('.meal-btn').forEach(btn => {
                 btn.classList.remove('active');
                 if (btn.dataset.meal === meal) {
-                    btn. classList.add('active');
+                    btn.classList.add('active');
                 }
             });
 
